# ky-AICommunity

./: .gitignore  .gitmodules  LICENSE  README.md
example/cmake /SimpleLibInstall/: CMakeLists.txt
example/cmake/FuncAndMarco/: CMakeLists.txt
example/cmake/SimpleCmakeInstall/: CMakeLists.txt
example/cmake/SimpleCmakeLink/: CMakeLists.txt  main.cpp
example/cmake/SimpleCmakeLink/SubLib/: CMakeLists.txt
example/cmake/SimpleCmakeLink/SubLib/include/: sub.h
example/cmake/SimpleCmakeLink/ThridLib/: CMakeLists.txt
example/cmake/SimpleCmakeLink/ThridLib/src/: third.cpp
example/cmake/SimpleCmakeLink/cmake/: InstallTools.cmake  NeedOpenCV.cmake.in
example/cmake/SimpleLib/: CMakeLists.txt  main.cpp
example/cmake/SimpleLib/SubLib/: CMakeLists.txt
example/cmake/SimpleLib/SubLib/src/: sub.cpp
example/cmake/SimpleLibInstall/: library.h
example/cmake/SimpleLibInteract/: CMakeLists.txt  main.cpp
example/cmake/SimpleLibInteract/ThridLib/: CMakeLists.txt
example/cmake/SimpleLibInteract/ThridLib/include/: third.h
example/cmake/SimpleLink/: CMakeLists.txt  main.cpp
example/cmake/SimpleUse/: CMakeLists.txt
ky_doc/online_book/: Introduce.md  README.md  index.md  package-lock.json  package.json
ky_doc/online_book/.vuepress/: config.js
ky_doc/online_book/.vuepress/components/test/: hello.vue
ky_doc/online_book/.vuepress/route/: index.js
ky_doc/online_book/.vuepress/route/sub/: aiRoute.js  cmakeRoute.js  mainRoute.js  webRoute.js
ky_doc/online_book/common/: README.md  WriteIntroduce.md  git.md  index.md
ky_doc/online_book/common/cmake/: FuncAndMarco.md  LibSoCompile.md  README.md  SimpleCmakeInstall.md  SimpleCmakeLink.md  SimpleLib.md  SimpleLibInstall.md  SimpleLibInteract.md  SimpleLink.md  SimpleUse.md  ThirdPartCompile.md
ky_doc/online_book/common/cmake/assets/: .$cmakeTarget.drawio.bkp  cmakeTarget.drawio
ky_doc/online_book/common/git/: git.md
ky_doc/online_book/common/markdown/: README.md
ky_doc/online_book/common/vuepress/: README.md
ky_doc/online_book/develop/: README.md
ky_doc/online_book/develop/ai/: README.md
ky_doc/online_book/develop/web/: README.md
ky_doc/online_book/robot/: README.md  index.md
ky_doc/online_book/todo/: README.md
ky_doc/online_book/trade/: README.md  index.md
